# wordGPT

./: .mailmap  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
examples/: 10-chat.cpp
src/: 02-completion.cpp  CMakeLists.txt  Json.txt  Makefile  cmake_install.cmake  dict.cc  dict.h  lang.cc  lang.h  main.cc  openai.hpp  quiz.cc  quiz.h  record.cc  record.h  user.h
src/curl/: curl.h
